# storeops

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
.skills/storeops/: SKILL.md
.skills/storeops/references/: COMMANDS.md  WORKFLOWS.md
src/: main.rs  repl.rs  update.rs
src/api/: apple_client.rs  google_client.rs  mod.rs
src/auth/: apple.rs  google.rs  mod.rs  store.rs
src/cli/: mod.rs
src/cli/apple/: age_rating.rs  analytics.rs  apps.rs  availability.rs  builds.rs  devices.rs  iap.rs  metadata.rs  mod.rs  phased_release.rs  previews.rs  pricing.rs  reviews.rs  screenshots.rs  submit.rs  subscriptions.rs  sync.rs  testflight.rs  versions.rs
src/cli/google/: apps.rs  availability.rs  builds.rs  images.rs  inapp.rs  listings.rs  mod.rs  reports.rs  reviews.rs  submit.rs  sync.rs  testers.rs  tracks.rs
src/config/: mod.rs  profiles.rs
src/output/: json.rs  markdown.rs  mod.rs  table.rs
tests/: cli_tests.rs
