[package]
name = "storeops"
version = "0.1.2"
edition = "2021"
description = "CLI for managing App Store Connect and Google Play Store lifecycle"
license = "MIT"
[[bin]]
name = "storeops"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
toml = "0.8"
directories = "5"
tabled = "0.17"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
flate2 = "1"
tar = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
rustyline = "15"
colored = "3"
shell-words = "1"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
